; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43029.c_get_kernel_sym.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43029.c_get_kernel_sym.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"/proc/kallsyms\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"[-] Failed to open /proc/kallsyms\0A\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"[+] Find %s...\0A\00", align 1
@EOF = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [10 x i8] c"%p %c %s\0A\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.6 = private unnamed_addr constant [21 x i8] c"[+] Found %s at %lx\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_kernel_sym(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8, align 1
  %7 = alloca [256 x i8], align 16
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %8, align 4
  %9 = call i32* @fopen(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @exit(i32 -1) #3
  unreachable

15:                                               ; preds = %1
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %45, %29, %15
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @EOF, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %46

22:                                               ; preds = %18
  %23 = load i32*, i32** %4, align 8
  %24 = bitcast i64* %5 to i8**
  %25 = getelementptr inbounds [256 x i8], [256 x i8]* %7, i64 0, i64 0
  %26 = call i32 (i32*, i8*, ...) @fscanf(i32* %23, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8** %24, i8* %6, i8* %25)
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %8, align 4
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %22
  %30 = load i32*, i32** %4, align 8
  %31 = getelementptr inbounds [256 x i8], [256 x i8]* %7, i64 0, i64 0
  %32 = call i32 (i32*, i8*, ...) @fscanf(i32* %30, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i8* %31)
  br label %18

33:                                               ; preds = %22
  %34 = load i8*, i8** %3, align 8
  %35 = getelementptr inbounds [256 x i8], [256 x i8]* %7, i64 0, i64 0
  %36 = call i32 @strcmp(i8* %34, i8* %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %45, label %38

38:                                               ; preds = %33
  %39 = load i32*, i32** %4, align 8
  %40 = call i32 @fclose(i32* %39)
  %41 = load i8*, i8** %3, align 8
  %42 = load i64, i64* %5, align 8
  %43 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.6, i64 0, i64 0), i8* %41, i64 %42)
  %44 = load i64, i64* %5, align 8
  store i64 %44, i64* %2, align 8
  br label %49

45:                                               ; preds = %33
  br label %18

46:                                               ; preds = %18
  %47 = load i32*, i32** %4, align 8
  %48 = call i32 @fclose(i32* %47)
  store i64 0, i64* %2, align 8
  br label %49

49:                                               ; preds = %46, %38
  %50 = load i64, i64* %2, align 8
  ret i64 %50
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fscanf(i32*, i8*, ...) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
